fixed gaps

--- a/src/styles.css
+++ b/src/styles.css
@@ -19,5 +19,5 @@ header {
 
 #theme-switch {
     display: flex;
-    gap: 0.5rem;
+    gap: 1rem;
 }
